--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,6 @@
+/* Mapbox GL JS CSS - required for proper map and marker rendering */
+@import "mapbox-gl/dist/mapbox-gl.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
